2nd attempt to fix key references overflow

--- a/style.css
+++ b/style.css
@@ -173,7 +173,6 @@ ul {
 .key-references ul li a{
     color: #000000;
     overflow-wrap: break-word;
-    word-wrap: break-word;
 }
 
 .abstract {
